--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <script src="static/bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
         <style>
             body { background-color: #323639; color: #d6d6d7; }
-            a:link, header a:hover, header a:active { color: #0096FF; text-decoration: none; }
-            a:active, a:hover { color: #4682B4; text-decoration: underline; }
-            a:visited { color: #4682B4; text-decoration: none; }
-            .img-bee { width: 25%; border-radius: 1rem; border-width: 0.025rem; border-style: solid; border-color: var(--bs-secondary); }
-            #portrait-img { width: 50%; border-radius: 1rem; border-width: 0.15rem; border-style: solid; border-color: var(--bs-secondary); }
-            .logo { height: 2.5rem; filter: invert(50%); }
-            .logo:hover { filter: invert(100%); }
+            a, a:link, a:visited, .nav-item a, .nav-item a:link, .nav-item a:visited { color: #0096FF; text-decoration: none; }
+            a:active, a:hover, .nav-item a:hover { text-decoration: underline; }
+            .icon-link-hover { --bs-icon-link-transform: translate3d(0, -.3rem, 0); }
+            .img-bee { width: 25%; border-radius: 1rem; border-width: 0.025rem; border-style: solid; border-color: var(--bs-warning); }
+            #portrait-img { width: 50%; border-radius: 1rem; border-width: 0.15rem; border-style: solid; border-color: var(--bs-warning); }
+            .logo { height: 2.5rem; }
+            summary:hover, .logo:hover { filter: opacity(50%); }
+            summary { color: var(--bs-warning); }
             .anchor-link {
                 padding: 0 .175rem;
                 font-weight: 400;
@@ -53,22 +54,23 @@
                 right: 20px;
                 display: none;
             }
-            summary:hover { filter: opacity(50%); }
         </style>
     </head>
     <body>
-        <header class="container-fluid row">
+        <header class="container-fluid p-3 row">
             <span class="col text-start" title="Beatrice the (Carpenter) Bee">
                 <img class="logo navbar-brand" src="static/images/icon.png" alt="Bee Logo" aria-hidden="true">
-                <a class="h2" href="https://www.seas.upenn.edu/~ericoc/bee/#title" id="title">Beatrice the Bee</a>
+                <a class="h2" href="https://www.seas.upenn.edu/~ericoc/bee/#title" id="title">
+                    Beatrice the Bee
+                </a>
             </span>
             <span class="col h4 text-end">
                 <a id="microscope" href="https://www.nano.upenn.edu/equipment/quanta-600-feg-esem/" target="_blank">Quanta 600 FEG ESEM</a>
             </span>
         </header>
         <main class="container-fluid">
-            <nav class="m-1 p-1 navbar simple-list-example-scrollspy" id="nav">
-                <ul class="nav nav-tabs border-dark border-top border-bottom border-3" role="tablist">
+            <nav class="m-1 p-1 navbar border-top border-bottom border-warning" id="nav">
+                <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#head">Head</a>
                     </li>
@@ -93,13 +95,13 @@
                 </ul>
             </nav>
             <div id="pictures" data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-                <p class="text-center">
+                <p class="text-center p-3">
                     <a href="static/images/portrait/portrait.png" id="portrait" target="_blank"><img alt="Portrait" id="portrait-img" src="static/images/portrait/portrait_annotated.png"></a>
                 </p>
                 <p class="lead text-center fst-italic p-1">
-                    Beatrice was a female carpenter bee, that was caught in North Philadelphia in May 2025.
+                    Beatrice was a female carpenter bee caught in North Philadelphia in May 2025.
                 </p>
-                <details class="border-3 border-top border-dark border-bottom m-1 p-1" open>
+                <details class="border-3 border-top border-warning border-bottom m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Head
@@ -116,7 +118,7 @@
                         <a href="static/images/head/head_002_4K.png" id="head2" target="_blank"><img alt="Head 002 (4K)" class="img-bee m-1" src="static/images/head/head_002_4K.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-dark m-1 p-1" open>
+                <details class="border-bottom border-3 border-warning m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Forehead
@@ -132,7 +134,7 @@
                         <a href="static/images/forehead/forehead_004.png" id="forehead4" target="_blank"><img alt="Forehead 004" class="img-bee m-1" src="static/images/forehead/forehead_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-dark m-1 p-1" open>
+                <details class="border-bottom border-3 border-warning m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Antenna
@@ -147,7 +149,7 @@
                         <a href="static/images/antenna/antenna_003.png" id="antenna3" target="_blank"><img alt="Antenna 003" class="img-bee m-1" src="static/images/antenna/antenna_003.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-dark m-1 p-1" open>
+                <details class="border-bottom border-3 border-warning m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Eye
@@ -163,7 +165,7 @@
                         <a href="static/images/eye/eye_004.png" id="eye4" target="_blank"><img alt="Eye 004" class="img-bee m-1" src="static/images/eye/eye_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-dark m-1 p-1" open>
+                <details class="border-bottom border-3 border-warning m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Wing
@@ -179,7 +181,7 @@
                         <a href="static/images/wing/wing_004.png" id="wing4" target="_blank"><img alt="Wing 004" class="img-bee m-1" src="static/images/wing/wing_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-dark m-1 p-1" open>
+                <details class="border-bottom border-3 border-warning m-1 p-1" open>
                     <summary class="p-1">
                         <span class="h3 text-start">
                             Knees
@@ -217,9 +219,9 @@
                 <i class="bi bi-arrow-up-circle-fill"></i>
             </button>
         </main>
-        <footer class="container-fluid border-top border-dark border-3 row">
-            <span class="text-start col" id="thanks">
-                <i class="bi bi-balloon-heart h4 text-danger"></i>
+        <footer class="container-fluid border-top border-warning p-3 row">
+            <span class="text-start col h4" id="thanks">
+                <i class="bi bi-balloon-heart text-danger"></i>
                 <span class="fw-bold">Thank you</span> to the <a class="fst-italic" href="https://www.nano.upenn.edu/resources/nanoscale-characterization/" target="_blank" title="Nanoscale Characterization Facility <https://www.nano.upenn.edu/resources/nanoscale-characterization/>">Nanoscale Characterization Facility</a>
                 (<span class="font-monospace">N.C.F.</span>)
                 at the <a class="fst-italic" href="https://www.nano.upenn.edu/" target="_blank" title="Singh Center for Nanotechnology <https://www.nano.upenn.edu/>">Singh Center for Nanotechnology</a>!
