--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </li>
                 </ul>
             </nav>
-            <div id="pictures" data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+            <div id="pictures">
                 <p class="text-center p-3">
                     <a href="static/images/portrait/portrait.png" id="portrait" target="_blank"><img alt="Portrait" id="portrait-img" src="static/images/portrait/portrait_annotated.png"></a>
                 </p>
@@ -102,10 +102,10 @@
                     Beatrice was a female carpenter bee caught in North Philadelphia in May 2025.
                 </p>
                 <details class="border-3 border-top border-warning border-bottom m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="head">
                         <span class="h3 text-start">
                             Head
-                            <a id="head" class="anchor-link" href="#head" aria-label="Link to this section: Head (head)">
+                            <a class="anchor-link" href="#head" aria-label="Link to this section: Head (head)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
@@ -119,10 +119,10 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="forehead">
                         <span class="h3 text-start">
                             Forehead
-                            <a id="forehead" class="anchor-link" href="#forehead" aria-label="Link to this section: Forehead (forehead)">
+                            <a class="anchor-link" href="#forehead" aria-label="Link to this section: Forehead (forehead)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
@@ -135,10 +135,10 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="antenna">
                         <span class="h3 text-start">
                             Antenna
-                            <a id="antenna" class="anchor-link" href="#antenna" aria-label="Link to this section: Antenna (antenna)">
+                            <a class="anchor-link" href="#antenna" aria-label="Link to this section: Antenna (antenna)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
@@ -150,10 +150,10 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="eye">
                         <span class="h3 text-start">
                             Eye
-                            <a id="eye" class="anchor-link" href="#eye" aria-label="Link to this section: Eye (eye)">
+                            <a class="anchor-link" href="#eye" aria-label="Link to this section: Eye (eye)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
@@ -166,10 +166,10 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="wing">
                         <span class="h3 text-start">
                             Wing
-                            <a id="wing" class="anchor-link" href="#wing" aria-label="Link to this section: Wing (wing)">
+                            <a class="anchor-link" href="#wing" aria-label="Link to this section: Wing (wing)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
@@ -182,10 +182,10 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1" id="knees">
                         <span class="h3 text-start">
                             Knees
-                            <a id="knees" class="anchor-link" href="#knees" aria-label="Link to this section: Knees (knees)">
+                            <a class="anchor-link" href="#knees" aria-label="Link to this section: Knees (knees)">
                                 <i class="bi bi-link-45deg"></i>
                             </a>
                         </span>
