--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
         <link href="static/bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="static/bootstrap-icons-1.12.1/bootstrap-icons.min.css">
         <link href="static/lightbox2-2.11.5/dist/css/lightbox.css" rel="stylesheet">
-        <script src="static/jquery-3.7.1.min.js"></script>
-        <script src="static/bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
-        <script src="static/lightbox2-2.11.5/dist/js/lightbox.js"></script>
         <style>
             body { background-color: #323639; color: #d6d6d7; }
             a, a:link, a:visited, .nav-item a, .nav-item a:link, .nav-item a:visited { color: #0096FF; text-decoration: none; }
             a:active, a:hover, .nav-item a:hover { text-decoration: underline; }
-            /* .icon-link-hover { --bs-icon-link-transform: translate3d(0, -.3rem, 0); } */
+            .icon-link-hover { --bs-icon-link-transform: translate3d(0, -.3rem, 0); }
             .img-bee { width: 25%; border-radius: 1rem; border-width: 0.025rem; border-style: solid; border-color: var(--bs-warning); }
             #portrait-img { width: 50%; border-radius: 1rem; border-width: 0.15rem; border-style: solid; border-color: var(--bs-warning); }
             .logo { height: 2.5rem; }
@@ -94,7 +91,7 @@
                     <i>Beatrice</i> 🐝 was a female carpenter bee caught in North Philadelphia in May 2025.
                 </p>
                 <details class="border-3 border-top border-warning border-bottom m-1 p-1" open>
-                    <summary class="p-1" id="head">
+                    <summary class="p-1" id="head" title="Head (5)">
                         <span class="h3 text-start">
                             Head (5)
                             <a class="anchor-link" href="#head" aria-label="Link to this section: Head (head)">
@@ -111,7 +108,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="forehead">
+                    <summary class="p-1" id="forehead" title="Forehead (4)">
                         <span class="h3 text-start">
                             Forehead (4)
                             <a class="anchor-link" href="#forehead" aria-label="Link to this section: Forehead (forehead)">
@@ -127,7 +124,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="antenna">
+                    <summary class="p-1" id="antenna" title="Antenna (3)">
                         <span class="h3 text-start">
                             Antenna (3)
                             <a class="anchor-link" href="#antenna" aria-label="Link to this section: Antenna (antenna)">
@@ -142,7 +139,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="eye">
+                    <summary class="p-1" id="eye" title="Eye (4)">
                         <span class="h3 text-start">
                             Eye (4)
                             <a class="anchor-link" href="#eye" aria-label="Link to this section: Eye (eye)">
@@ -158,7 +155,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="wing">
+                    <summary class="p-1" id="wing" title="Wing (4)">
                         <span class="h3 text-start">
                             Wing (4)
                             <a class="anchor-link" href="#wing" aria-label="Link to this section: Wing (wing)">
@@ -174,7 +171,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="knees">
+                    <summary class="p-1" id="knees" title="Knees (2)">
                         <span class="h3 text-start">
                             Knees (2)
                             <a class="anchor-link" href="#knees" aria-label="Link to this section: Knees (knees)">
@@ -189,7 +186,7 @@
                 </details>
                 <details class="m-1 p-1" open>
                     <summary class="p-1">
-                        <span class="h3 text-start">
+                        <span class="h3 text-start" title="Stinger (7)">
                             Stinger (7)
                             <a id="stinger" class="anchor-link" href="#stinger" aria-label="Link to this section: Stinger (stinger)">
                                 <i class="bi bi-link-45deg"></i>
@@ -212,15 +209,16 @@
             </button>
         </main>
         <footer class="container-fluid border-top border-warning p-3 row">
-            <span class="text-start col h4" id="thanks">
+            <span class="text-start col h5" id="thanks">
                 <i class="bi bi-balloon-heart text-danger"></i>
                 <span class="fw-bold">Thank you</span> to the <a class="fst-italic" href="https://www.nano.upenn.edu/resources/nanoscale-characterization/" target="_blank" title="Nanoscale Characterization Facility <https://www.nano.upenn.edu/resources/nanoscale-characterization/>">Nanoscale Characterization Facility</a>
-                (<span class="font-monospace">N.C.F.</span>)
-                at the <a class="fst-italic" href="https://www.nano.upenn.edu/" target="_blank" title="Singh Center for Nanotechnology <https://www.nano.upenn.edu/>">Singh Center for Nanotechnology</a>!
+                (<span class="font-monospace">NCF</span>) at the <a class="fst-italic" href="https://www.nano.upenn.edu/" target="_blank" title="Singh Center for Nanotechnology <https://www.nano.upenn.edu/>">Singh Center for Nanotechnology</a>!
             </span>
             <span class="text-end col" id="source" title="View Source: <https://github.com/upenn/beatrice-bee-ericoc>">
-                <i class="bi bi-code-slash"></i>
-                <a class="font-monospace" href="https://github.com/upenn/beatrice-bee-ericoc" title="View source of this page <https://github.com/upenn/beatrice-bee-ericoc>">https://github.com/upenn/beatrice-bee-ericoc</a>
+                <a class="font-monospace icon-link icon-link-hover" href="https://github.com/upenn/beatrice-bee-ericoc" title="View source of this page <https://github.com/upenn/beatrice-bee-ericoc>">
+                    <i class="bi bi-code-slash"></i>
+                    https://github.com/upenn/beatrice-bee-ericoc
+                </a>
             </span>
         </footer>
         <script>
@@ -244,5 +242,8 @@
                 document.documentElement.scrollTop = 0;
             }
         </script>
+        <script src="static/jquery-3.7.1.min.js"></script>
+        <script src="static/bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"></script>
+        <script src="static/lightbox2-2.11.5/dist/js/lightbox.js"></script>
     </body>
 </html>
