--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
             <nav class="m-1 p-1 navbar" id="nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#head">Head</a>
+                        <a class="nav-link" href="#head" title="Head">Head</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#forehead">Forehead</a>
+                        <a class="nav-link" href="#forehead" title="Forehead">Forehead</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#antenna">Antenna</a>
+                        <a class="nav-link" href="#antenna" title="Antenna">Antenna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#eye">Eye</a>
+                        <a class="nav-link" href="#eye" title="Eye">Eye</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#wing">Wing</a>
+                        <a class="nav-link" href="#wing" title="Wing">Wing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#knees">Knees</a>
+                        <a class="nav-link" href="#knees" title="Knees">Knees</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#stinger">Stinger</a>
+                        <a class="nav-link" href="#stinger" title="Stinger">Stinger</a>
                     </li>
                 </ul>
             </nav>
@@ -91,7 +91,7 @@
                     <i>Beatrice</i> 🐝 was a female carpenter bee caught in North Philadelphia in May 2025.
                 </p>
                 <details class="border-3 border-top border-warning border-bottom m-1 p-1" open>
-                    <summary class="p-1" id="head" title="Head (5)">
+                    <summary class="p-1 bee-parts" id="head" title="Head (5)">
                         <span class="h3 text-start">
                             Head (5)
                             <a class="anchor-link" href="#head" aria-label="Link to this section: Head (head)">
@@ -108,7 +108,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="forehead" title="Forehead (4)">
+                    <summary class="p-1 bee-parts" id="forehead" title="Forehead (4)">
                         <span class="h3 text-start">
                             Forehead (4)
                             <a class="anchor-link" href="#forehead" aria-label="Link to this section: Forehead (forehead)">
@@ -124,7 +124,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="antenna" title="Antenna (3)">
+                    <summary class="p-1 bee-parts" id="antenna" title="Antenna (3)">
                         <span class="h3 text-start">
                             Antenna (3)
                             <a class="anchor-link" href="#antenna" aria-label="Link to this section: Antenna (antenna)">
@@ -139,7 +139,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="eye" title="Eye (4)">
+                    <summary class="p-1 bee-parts" id="eye" title="Eye (4)">
                         <span class="h3 text-start">
                             Eye (4)
                             <a class="anchor-link" href="#eye" aria-label="Link to this section: Eye (eye)">
@@ -155,7 +155,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="wing" title="Wing (4)">
+                    <summary class="p-1 bee-parts" id="wing" title="Wing (4)">
                         <span class="h3 text-start">
                             Wing (4)
                             <a class="anchor-link" href="#wing" aria-label="Link to this section: Wing (wing)">
@@ -171,7 +171,7 @@
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1" id="knees" title="Knees (2)">
+                    <summary class="p-1 bee-parts" id="knees" title="Knees (2)">
                         <span class="h3 text-start">
                             Knees (2)
                             <a class="anchor-link" href="#knees" aria-label="Link to this section: Knees (knees)">
@@ -185,7 +185,7 @@
                     </p>
                 </details>
                 <details class="m-1 p-1" open>
-                    <summary class="p-1">
+                    <summary class="p-1 bee-parts">
                         <span class="h3 text-start" title="Stinger (7)">
                             Stinger (7)
                             <a id="stinger" class="anchor-link" href="#stinger" aria-label="Link to this section: Stinger (stinger)">
