details, not summary, classes

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <p class="lead text-center p-1">
                     <i>Beatrice</i> 🐝 was a female carpenter bee caught in North Philadelphia in May 2025.
                 </p>
-                <details class="border-3 border-top border-warning border-bottom m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="head" title="Head (5)">
+                <details class="border-3 border-top border-warning border-bottom m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="head" title="Head (5)">
                         <span class="h3 text-start">
                             Head (5)
                             <a class="anchor-link" href="#head" aria-label="Link to this section: Head (head)">
@@ -107,8 +107,8 @@
                         <a href="static/images/head/head_002_4K.png" id="head2" data-lightbox="head" target="_blank"><img alt="Head 002 (4K)" class="img-bee m-1" src="static/images/head/head_002_4K.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="forehead" title="Forehead (4)">
+                <details class="border-bottom border-3 border-warning m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="forehead" title="Forehead (4)">
                         <span class="h3 text-start">
                             Forehead (4)
                             <a class="anchor-link" href="#forehead" aria-label="Link to this section: Forehead (forehead)">
@@ -123,8 +123,8 @@
                         <a href="static/images/forehead/forehead_004.png" id="forehead4" data-lightbox="forehead" target="_blank"><img alt="Forehead 004" class="img-bee m-1" src="static/images/forehead/forehead_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="antenna" title="Antenna (3)">
+                <details class="border-bottom border-3 border-warning m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="antenna" title="Antenna (3)">
                         <span class="h3 text-start">
                             Antenna (3)
                             <a class="anchor-link" href="#antenna" aria-label="Link to this section: Antenna (antenna)">
@@ -138,8 +138,8 @@
                         <a href="static/images/antenna/antenna_003.png" id="antenna3" data-lightbox="antenna" target="_blank"><img alt="Antenna 003" class="img-bee m-1" src="static/images/antenna/antenna_003.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="eye" title="Eye (4)">
+                <details class="border-bottom border-3 border-warning m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="eye" title="Eye (4)">
                         <span class="h3 text-start">
                             Eye (4)
                             <a class="anchor-link" href="#eye" aria-label="Link to this section: Eye (eye)">
@@ -154,8 +154,8 @@
                         <a href="static/images/eye/eye_004.png" id="eye4" data-lightbox="eye" target="_blank"><img alt="Eye 004" class="img-bee m-1" src="static/images/eye/eye_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="wing" title="Wing (4)">
+                <details class="border-bottom border-3 border-warning m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="wing" title="Wing (4)">
                         <span class="h3 text-start">
                             Wing (4)
                             <a class="anchor-link" href="#wing" aria-label="Link to this section: Wing (wing)">
@@ -170,8 +170,8 @@
                         <a href="static/images/wing/wing_004.png" id="wing4" data-lightbox="wing" target="_blank"><img alt="Wing 004" class="img-bee m-1" src="static/images/wing/wing_004.png"></a>
                     </p>
                 </details>
-                <details class="border-bottom border-3 border-warning m-1 p-1" open>
-                    <summary class="p-1 bee-parts" id="knees" title="Knees (2)">
+                <details class="border-bottom border-3 border-warning m-1 p-1 bee-parts" open>
+                    <summary class="p-1" id="knees" title="Knees (2)">
                         <span class="h3 text-start">
                             Knees (2)
                             <a class="anchor-link" href="#knees" aria-label="Link to this section: Knees (knees)">
@@ -184,8 +184,8 @@
                         <a href="static/images/knees/knees_008.png" id="knees8" data-lightbox="knees" target="_blank"><img alt="Knees 008" class="img-bee m-1" src="static/images/knees/knees_008.png"></a>
                     </p>
                 </details>
-                <details class="m-1 p-1" open>
-                    <summary class="p-1 bee-parts">
+                <details class="m-1 p-1 bee-parts" open>
+                    <summary class="p-1">
                         <span class="h3 text-start" title="Stinger (7)">
                             Stinger (7)
                             <a id="stinger" class="anchor-link" href="#stinger" aria-label="Link to this section: Stinger (stinger)">
