--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                 <span class="fw-bold">Thank you</span> to the <a class="fst-italic" href="https://www.nano.upenn.edu/resources/nanoscale-characterization/" target="_blank" title="Nanoscale Characterization Facility <https://www.nano.upenn.edu/resources/nanoscale-characterization/>">Nanoscale Characterization Facility</a>
                 at the <a class="fst-italic" href="https://www.nano.upenn.edu/" target="_blank" title="Singh Center for Nanotechnology <https://www.nano.upenn.edu/>">Singh Center for Nanotechnology</a>!
             </span>
-            <span class="text-end col" id="source" title="View Source: <https://github.com/upenn/beatrice-bee-ericoc>">
-                <a class="font-monospace icon-link icon-link-hover" href="https://github.com/upenn/beatrice-bee-ericoc" title="View source of this page <https://github.com/upenn/beatrice-bee-ericoc>">
+            <span class="text-end col" id="source" title="View Source: <https://github.com/ericoc/beatrice-bee>">
+                <a class="font-monospace icon-link icon-link-hover" href="https://github.com/ericoc/beatrice-bee" title="View source of this page <https://github.com/ericoc/beatrice-bee>">
                     <i class="bi bi-code-slash"></i>
-                    https://github.com/upenn/beatrice-bee-ericoc
+                    https://github.com/ericoc/beatrice-bee
                 </a>
             </span>
         </footer>
